fix spacing on mobile cart & top of pages, refine product page styles

--- a/assets/scss/components/foundation/type/_type.scss
+++ b/assets/scss/components/foundation/type/_type.scss
@@ -43,9 +43,14 @@ cite {
 
 .page-heading {
     text-transform: uppercase;
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin: 0 (spacing("base") + spacing("half") + spacing("quarter")) spacing("single");
-    text-align: left;
+    text-align: center;
+
+    @include breakpoint("small") {
+        font-size: 1.5em;
+        text-align: left;
+    }
 
 }
 
