--- a/assets/scss/components/stencil/previewCart/_previewCart.scss
+++ b/assets/scss/components/stencil/previewCart/_previewCart.scss
@@ -44,7 +44,7 @@
     padding: spacing("base");
     text-align: center;
     margin: 0 auto;
-    width: 50%;
+    width: 300px;
 
     @include breakpoint("medium") {
         padding: spacing("single");
