--- a/assets/scss/layouts/body/_body.scss
+++ b/assets/scss/layouts/body/_body.scss
@@ -10,8 +10,13 @@
 
 .body {
     margin-bottom: spacing("single") * 2;
-    padding-top: 55px;
-    @include breakpoint(801px) {
+    padding-top: 20px;
+
+    @include breakpoint("small") {
+        padding-top: 70px;
+    }
+
+    @include breakpoint("medium") {
         padding-top: 120px;
     }
 }
